--- a/MJ-android/bin/AndroidManifest.xml
+++ b/MJ-android/bin/AndroidManifest.xml
@@ -20,5 +20,6 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 </manifest>
